// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create a triangle in bottom direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="bottom"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a triangle in down direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="down"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a triangle in left direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="left"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a triangle in right direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a triangle in top direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Create a triangle in up direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="up"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Triangle control 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="up"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Triangle"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "fill": "black",
      "stokeWidth": "2px",
      "stroke": "black",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Triangle__SVGView
    bottom={null}
    className="ui-triangle test-class"
    contentEditable={false}
    controlled={true}
    direction="up"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="Triangle"
    padding={null}
    preserveAspectRatio="xMidYMid meet"
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "black",
        "stokeWidth": "2px",
        "stroke": "black",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    version="1.1"
    viewBox="0 0 40 40"
    visible={true}
    width={null}
    xcss={null}
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="0,35, 20,10 40,35"
    />
  </Triangle__SVGView>
</Wrapper>
`;

exports[`Test retrieval of Triangle props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "up",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "nobase": false,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Triangle",
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "fill": "black",
    "stokeWidth": "2px",
    "stroke": "black",
  },
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
